# ConvolutedComputerVision

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
camelyon17-wilds/: README.md  download_data.py  notebook.ipynb
chest-mnist/: README.md  download_data.py  notebook.ipynb
chest-x-ray-images-pneumonia/: 01_start.ipynb  02_resizing.ipynb  02_transferring.ipynb  02_vgg19_transferring.ipynb  03_mnist_transferring_and_resizing.ipynb  03_transferring_and_resizing.ipynb  04_gap.ipynb  05_attention.ipynb  06_mobilenetv2_transferring.ipynb  06_pretrained.ipynb  07_ensemble.ipynb  No Pretraining.ipynb  No Transferring.ipynb  README.md  Resizing and Transfer Learning.ipynb  Resizing.ipynb  WRITEUP.md  With Pretraining.ipynb  With Transferring.ipynb  download_data.py  split_data.py
cifar-10/: README.md  download_data.py  notebook.ipynb
mnist/: README.md  download_data.py  notebook.ipynb
oxford-pet-segmentation/: README.md  download_data.py  notebook.ipynb
pneumonia_mnist/: 01_adam.ipynb  02_adamw.ipynb  03_small_cnn.ipynb  04_ensemble.ipynb  Adam.ipynb  AdamW.ipynb  README.md  download_data.py
projects/cifar-10/: notebook.ipynb
projects/pneumonia_mnist/: notebook.ipynb
src/visualization/: __init__.py  colab.py  datasets.py  gradcam.py  plots.py  weights.py
