[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[project]
name = "convolutedcomputervision"
version = "0.1.0"
description = ""
authors = [{ name = "Samuel Lowe", email = "samlowe106@gmail.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "matplotlib>=3.10.1,<4",
    "notebook>=7.3.3,<8",
    "pandas>=2.2.3,<3",
    "scikit-learn>=1.6.1,<2",
    "seaborn>=0.13.2,<0.14",
    "tensorflow>=2.21,<3",
    "torch>=2.6.0,<3",
    "tensorflow-datasets>=4.9.8,<5",
    "importlib-resources>=7.1.0",
    "pooch>=1.8,<2",
]

[tool.uv.build-backend]
# The shared code is the `visualization` package under src/, not a package named
# after the project, so point the build backend at it. Installing it (editable,
# via `uv sync`) lets the notebooks `import visualization` without a sys.path hack.
module-name = "visualization"
